--- a/index.html
+++ b/index.html
@@ -64,14 +64,15 @@
                 </p>
                 <p class="page-history__subtitle">
                   Ми підтримуємо
-                  <span class="_gray">тісні стосунки із професіоналами </span> у
-                  світі котів і собак, зокрема з фахівцями із розведення. Як
-                  фахівець із розведення, ви неперевершений експерт, коли мова
-                  заходить про розуміння здоров’я та благополуччя котів. Ми
-                  працюємо разом для досягнення нашої спільної місії:<span>
-                    Покращити здоров’я та благополуччя кожного кота, розширивши
-                    кордони харчування та знань шляхом взаємовигідного
-                    партнерства.</span
+                  <span class="_gray">тісні стосунки із професіоналами </span>
+                  у світі собак, зокрема з фахівцями із розведення. Як фахівець
+                  із розведення, ви неперевершений експерт, коли мова заходить
+                  про розуміння здоров’я та благополуччя вашого собаки. Ми
+                  працюємо разом для досягнення нашої спільної місії:
+                  <span>
+                    Покращити здоров’я та благополуччя кожного собаки,
+                    розширивши кордони харчування та знань шляхом
+                    взаємовигідного партнерства.</span
                   >
                 </p>
               </div>
