--- a/index.html
+++ b/index.html
@@ -245,7 +245,14 @@
                 </div>
               </div>
               <div class="pregnancy-img">
-                <img src="./img/day42.svg" alt="" />
+                <img
+                  src="./img/day42.svg"
+                  class="page__img materialboxed"
+                  alt="" />
+                <img
+                  src="./img/day42-mob.jpg"
+                  class="page-mob__img materialboxed"
+                  alt="" />
               </div>
             </div>
           </div>
@@ -662,7 +669,12 @@
                   </li>
                 </ul>
               </div>
-              <img src="./img/table.svg" alt="table" />
+              <img src="./img/table.svg" class="page__img" alt="table" />
+              <img
+                src="./img/table.jpg"
+                class="page-mob__img materialboxed"
+                width="100%"
+                alt="table" />
             </div>
 
             <p class="diet-note">
@@ -994,8 +1006,8 @@
                 alt="table-consist" />
 
               <img
-                src="./img/table-consist-mobile.svg"
-                class="_img milk-about-mob__img"
+                src="./img/table-consist-mobile.jpg"
+                class="_img milk-about-mob__img page-mob__img materialboxed"
                 alt="table-consist" />
             </div>
             <div class="note">
@@ -1011,11 +1023,17 @@
           </div>
         </section>
 
-        <section id="section-6" class="page__diet diet-solution">
+        <section id="section-6" class="page__diet">
           <div class="diet-mobile__block">
             <img src="./img/mark-mob.svg" alt="" class="diet-mobile__img" />
             <div class="diet-mobile__text">
-              <h2 class="diet-mobile__title">STARTER</h2>
+              <div class="lbl-points">
+                <h2 class="diet-mobile__title">
+                  <strong>STARTER</strong>
+                </h2>
+                <img src="./img/points.svg" alt="" />
+              </div>
+              <p class="diet-mobile__subtitle">Стартер</p>
             </div>
           </div>
           <div class="diet-solution _container">
@@ -1034,7 +1052,7 @@
                 <img
                   src="./img/products/img-starter-puppy-mob.png"
                   alt=""
-                  style="width: 50%"
+                  style="width: 80%"
                   class="diet-card__img-mob" />
 
                 <p class="diet-card__text">
@@ -1129,7 +1147,12 @@
           <div class="diet-mobile__block">
             <img src="./img/mark-mob.svg" alt="" class="diet-mobile__img" />
             <div class="diet-mobile__text">
-              <h2 class="diet-mobile__title">Цуценя</h2>
+              <div class="lbl-points">
+                <h2 class="diet-mobile__title">
+                  <strong>Цуценя</strong>
+                </h2>
+                <img src="./img/points.svg" alt="" />
+              </div>
             </div>
           </div>
           <div class="diet-solution _container">
@@ -1149,7 +1172,7 @@
                 <img
                   src="./img/products/img-puppys-mob.png"
                   alt=""
-                  style="width: 50%"
+                  style="width: 80%"
                   class="diet-card__img-mob" />
               </div>
 
