--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <div class="diet-factors">
                 <img src="./img/calendar.svg" alt="calendar" />
                 <p class="diet-factors__subtitle">
-                  Протягом трьох тижнів тічки сука перебуває в оптимальній
+                  Протягом трьох тижнів тічки, сука перебуває в оптимальній
                   фертильності лише протягом 3-4 днів
                 </p>
               </div>
@@ -255,14 +255,19 @@
                   alt="" />
               </div>
             </div>
+            <p class="diet-note">
+              * (Fontaine, E. (2012). Прийом їжі та харчування під час
+              вагітності, лактації та відлучення матері і потомства. Розмноження
+              домашніх тварин, 47, 326-330.)
+            </p>
           </div>
         </div>
 
         <section id="section-1" class="page__program program">
           <div class="program__container _container" id="block3">
             <h2 class="program-title">
-              Комплексна програма харчування для забезпечення здоров’я кішки та
-              кошенят
+              Комплексна програма харчування для забезпечення здоров’я суки та
+              цуценят
             </h2>
             <div class="cards-block scroll-wrapper" id="scrollWrapper">
               <img src="./test.svg" alt="table-complex" />
@@ -312,6 +317,7 @@
               →
             </button>
           </div>
+          <p class="diet-note">*Залежно від дорослого розміру</p>
         </section>
 
         <section id="section-2" class="page__diet diet">
@@ -359,9 +365,10 @@
                   спеціально адаптовані до потреб сук на першій фазі репродукції
                   <span class="_gray"
                     >від першого дня тічки до 42-го дня вагітності.</span
-                  >Під час цієї фази потреби суки
-                  <span class="_red"> в енергії стабільні,</span> але потрібні
-                  певні поживні речовини
+                  >
+                  Під час цієї фази потреби суки
+                  <span class="_red"> в енергії стабільні,</span>
+                  але потрібні певні поживні речовини
                   <span class="_gray"
                     >для здорового розвитку майбутніх цуценят.</span
                   >
@@ -439,7 +446,7 @@
               alt=""
               style="position: absolute" />
             <div class="diet-block">
-              <div class="diet-block__img complex">
+              <div class="diet-block__img">
                 <img
                   src="./img/products/img-starter.svg"
                   alt=""
@@ -451,7 +458,7 @@
                   class="diet-card__img-mob" />
 
                 <p class="diet-card__text">
-                  <span class="_gray">Сукиз 42-го </span> дня вагітності до
+                  <span class="_gray">Суки з 42-го </span> дня вагітності до
                   кінця лактації
                 </p>
               </div>
@@ -866,22 +873,15 @@
                     </ul>
                   </div>
                 </div>
-
-                <div class="factors__list">
-                  <h2 class="factors__list-title"></h2>
-                  <p class="factors__list-subtitle"></p>
-                  <ul class="sublist">
-                    <li class="sublist-item"></li>
-                    <li class="sublist-item"></li>
-                  </ul>
-                </div>
               </div>
             </div>
 
             <p class="diet-note">
-              *Dobenecker et al 1998 – Дані сильно відрізняються залежно від
-              самої кішки, періоду лактації та розміру потомства.**Для
-              розчинення додайте одну ложку (4 г) сухого молока на 20 мл води.
+              *Дослідження показали, що гіперімунізовані добавки з яєчним
+              порошком (Mila et al. 2016 a,b; Mila et al. 2017), добавки у
+              вигляді молока Babydog + мальтодекстрин (Mila et al. c,d; Le Gal
+              et al. 2016) або добавки Puppy ProTech (Boutigny et al. 2016) мали
+              позитивний вплив на ранній розвиток цуценят.
             </p>
             <p class="diet-note">
               **Назва патенту: «Продукт для здоров'я собак, що містить антитіла
@@ -1044,7 +1044,7 @@
               alt="kitten_lable"
               style="position: absolute" />
             <div class="diet-block">
-              <div class="diet-block__img">
+              <div class="diet-block__img complex">
                 <img
                   src="./img/products/img-starter-puppy.svg"
                   alt=""
@@ -1079,10 +1079,14 @@
                 <p class="diet-block__subtitle">
                   Оскільки молочні зуби прорізуються від 21 до 35 днів після
                   народження, цуценята можуть жувати і споживати сухий корм вже
-                  з 5-6 тижня. Текстура їжі, яка їм дається, повинна відповідати
-                  цій еволюції. Поживні раціони ROYAL CANIN® Starter
-                  забезпечують перехід від молока до твердої їжі завдяки
-                  крокетам, які легко розмочуються.
+                  з 5-6 тижня.
+                  <span class="_red"
+                    >Текстура їжі, яка їм дається, повинна відповідати цій
+                    еволюції.</span
+                  >
+                  Поживні раціони ROYAL CANIN® Starter забезпечують перехід від
+                  молока до твердої їжі завдяки крокетам, які легко
+                  розмочуються.
                 </p>
                 <img src="./img/frise/frise-5.svg" class="_img" alt="" />
               </div>
@@ -1094,7 +1098,7 @@
                   <h3 class="diet-list__title">Підтримання імунної системи</h3>
                   <p class="diet-list__subtitle">
                     Комбінація нутрієнтів для підтримання здоров'я травної
-                    системи та природних захисних сил організму.s
+                    системи та природних захисних сил організму
                   </p>
                 </div>
               </li>
@@ -1184,8 +1188,8 @@
 
                 <p class="diet-block__subtitle">
                   Асортимент продукції для цуценят ROYAL CANIN® сприяє розвитку
-                  здорової імунної системи цуценят та інших їхніх специфічних
-                  потреб.
+                  <span class="_red"> здорової імунної системи цуценят</span> та
+                  інших їхніх специфічних потреб.
                 </p>
                 <p class="diet-block__subtitle">
                   <span class="_gray"
@@ -1225,7 +1229,8 @@
                 <img src="./img/icons/icon-12.svg" alt="" />
                 <div class="diet-list__text">
                   <h3 class="diet-list__title">
-                    МІНІАТЮРНІ Оптимальний вміст енергії
+                    МІНІАТЮРНІ <br />
+                    Оптимальний вміст енергії
                   </h3>
                   <p class="diet-list__subtitle">
                     Задовольняє високі енергетичні потреби цуценят мініатюрних
@@ -1306,7 +1311,7 @@
                 <p class="adaptive__block-subtitle">
                   <span class="_gray"
                     >Хрусткі крокети в поєднанні з привабливим смаком вологого
-                    раіону дарують цуценятам неймовірні враження від
+                    раціону дарують цуценятам неймовірні враження від
                     годування.</span
                   >
                   Вологі раціони Royal Canin розроблені для забезпечення
@@ -1328,7 +1333,16 @@
                 </ul>
               </div>
               <div class="adaptive__block-img">
-                <img src="./img/img-puppys2.svg" width="100%" alt="" />
+                <img
+                  src="./img/img-puppys2.svg"
+                  class="diet-card__img"
+                  width="100%"
+                  alt="" />
+                <img
+                  src="./img/img-puppys2-mob.png"
+                  class="diet-card__img-mob"
+                  width="100%"
+                  alt="" />
                 <p class="adaptive__block-img-text _red">
                   Дозволяють споживати менше калорій при однаковій вазі корму,
                   при цьому забезпечуючи належний рівень надходження поживних
