--- a/index.html
+++ b/index.html
@@ -1188,10 +1188,10 @@
 
                 <p class="diet-block__subtitle">
                   Асортимент продукції для цуценят ROYAL CANIN® сприяє розвитку
-                  <span class="_red"> здорової імунної системи цуценят</span> та
+                  <span class="_red"> здорової імунної системи</span> цуценят та
                   інших їхніх специфічних потреб.
                 </p>
-                <p class="diet-block__subtitle">
+                <p class="diet-block__subtitle program">
                   <span class="_gray"
                     >Користь завдяки спеціально відібраним нутрієнтам для
                     кожного етапу росту.</span
