--- a/index.html
+++ b/index.html
@@ -261,6 +261,17 @@
               домашніх тварин, 47, 326-330.)
             </p>
           </div>
+          <div class="youtube-video">
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/j7sC2tNUyig?si=fTPGl3opxeyh9K56"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen></iframe>
+          </div>
         </div>
 
         <section id="section-1" class="page__program program">
@@ -693,9 +704,18 @@
               тваринництва 93.9 (2015): 4436-4442.
             </p>
             <p class="diet-note">***Рівень глюкози в крові.</p>
+            <div class="youtube-video">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/m3M22p1EO6w?si=9R9SidT8fIhfXDYT"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen></iframe>
+            </div>
           </div>
-
-          .
         </section>
 
         <section id="section-4" class="page__diet diet-milk">
