--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -389,14 +389,15 @@
             </div>
             <ul class="diet-list">
               <li class="diet-list__item">
-                <img src="./img/icons/icon-4.svg" alt="" />
+                <img src="./img/icons/icon-1.svg" alt="" />
                 <div class="diet-list__text">
-                  <h3 class="diet-list__title">Розвиток мозку</h3>
+                  <h3 class="diet-list__title">Репродуктивне здоров’я</h3>
                   <p class="diet-list__subtitle">
-                    Раціон збагачений
-                    <span class="_gray">ДГК, Омега-3 жирною кислотою,</span>
-                    яка, має науково доведену ефективність у підтриманні
-                    розвитку мозку та зору цуценят у період вагітності.
+                    Специфічний комплекс нутрієнтів для задоволення харчових
+                    потреб суки на 1-му етапі репродуктивного циклу: від тічки
+                    до 42-го дня вагітності з додаванням
+                    <span class="_gray">бета-каротину та фолієвої кислоти</span>
+                    та адаптованим вмістом енергії.
                   </p>
                 </div>
               </li>
@@ -412,15 +413,14 @@
                 </div>
               </li>
               <li class="diet-list__item">
-                <img src="./img/icons/icon-1.svg" alt="" />
+                <img src="./img/icons/icon-4.svg" alt="" />
                 <div class="diet-list__text">
-                  <h3 class="diet-list__title">Репродуктивне здоров’я</h3>
+                  <h3 class="diet-list__title">Розвиток мозку цуценят</h3>
                   <p class="diet-list__subtitle">
-                    Специфічний комплекс нутрієнтів для задоволення харчових
-                    потреб суки на 1-му етапі репродуктивного циклу: від тічки
-                    до 42-го дня вагітності з додаванням
-                    <span class="_gray">бета-каротину та фолієвої кислоти</span>
-                    та адаптованим вмістом енергії.
+                    Раціон збагачений
+                    <span class="_gray">омега-3 жирною кислотою (ДГК),</span>
+                    яка має науково доведену ефективність у підтриманні розвитку
+                    мозку та здорового зору цуценят під час вагітності.
                   </p>
                 </div>
               </li>
@@ -457,16 +457,20 @@
               alt=""
               style="position: absolute" />
             <div class="diet-block">
-              <div class="diet-block__img">
+              <div class="diet-block__img startera">
                 <img
-                  src="./img/products/img-starter.svg"
+                  src="./img/products/img-starter-puppy.svg"
                   alt=""
                   class="diet-card__img" />
                 <img
-                  src="./img/products/img-starter-mob.png"
+                  src="./img/products/img-starter-puppy-mob.png"
                   alt=""
                   style="width: 80%"
                   class="diet-card__img-mob" />
+                <img
+                  src="./img/products/plashka-mob.svg"
+                  class="diet-card__img-mob img-plashka"
+                  alt="plashka" />
 
                 <p class="diet-card__text">
                   <span class="_gray">Суки з 42-го </span> дня вагітності до
@@ -475,7 +479,7 @@
               </div>
               <div class="diet-block__text">
                 <h2 class="diet-block__title">
-                  Підтримання здоров’я матері під час вагітності та лактації
+                  Підтримання здоров’я суки під час вагітності та лактації
                 </h2>
                 <p class="diet-block__subtitle">
                   Суки потребують
@@ -513,7 +517,7 @@
                   <p class="diet-list__subtitle">
                     Адаптовано до
                     <span class="_gray"> високих енергетичних потреб суки </span
-                    >наприкінці вагітності та під час лактації для оптимального
+                    >наприкінці вагітності, та під час лактації для оптимального
                     росту цуценят.
                   </p>
                 </div>
@@ -527,19 +531,6 @@
                       >Високоперетравні білки та пребіотики (ФОС, МОС, буряковий
                       жом).</span
                     >
-                  </p>
-                </div>
-              </li>
-
-              <li class="diet-list__item">
-                <img src="./img/icons/icon-9.svg" alt="" />
-                <div class="diet-list__text">
-                  <h3 class="diet-list__title">
-                    Поєднання сухого раціону з вологим
-                  </h3>
-                  <p class="diet-list__subtitle">
-                    З метою підвищення смакової привабливості для перебірливого
-                    апетиту сук під час розмноження.
                   </p>
                 </div>
               </li>
@@ -566,7 +557,7 @@
               <p class="starter-block_subtitle">ПЕРШІ ДНІ КРИТИЧНО ВАЖЛИВІ</p>
               <p class="starter-block_text">
                 <span class="_gray"
-                  >Дослідження показують, що неонатальна смертність собак є
+                  >Дослідження показують, що неонатальна смертність цуценят є
                   проблемою в усьому світі, причому вона стосується всіх порід і
                   розмірів.</span
                 >
@@ -646,7 +637,8 @@
                     <p class="diet-factors__subtitle diet-factors__text">
                       Цуценята з ректальною температурою
                       <span class="_gray"
-                        >35°C не можуть належним чином перетравлювати їжу.</span
+                        >35°C не можуть належним чином перетравлювати
+                        корм.</span
                       >
                     </p>
                   </li>
@@ -663,17 +655,18 @@
                   <li class="factors-item">
                     <p><span class="_gray">СПОЖИВАННЯ МОЛОЗИВА</span></p>
                     <p>
-                      Виживання цуценят на перших тижнях особливо залежить від
-                      молозива, специфічного секрету молочної залози, що
-                      виробляється протягом перших двох днів після народження
-                      цуценят.
+                      Виживання цуценят протягом перших тижнів життя особливо
+                      залежить від молозива, специфічного секрету молочної
+                      залози, що виробляється протягом перших двох днів після
+                      народження цуценят.
                     </p>
                   </li>
                   <li class="factors-item">
-                    <p><span class="_gray">ГЛІКЕМІЯ3***</span></p>
+                    <p><span class="_gray">ГЛIКЕМIЯ***</span></p>
                     <p>
-                      За допомогою глікемії через 24 години життя можна виявити
-                      цуценят з недостатнім споживанням енергії.
+                      За допомогою вимірювання рівня глюкози в крові у віці 24
+                      годин можна виявити цуценят з недостатнім споживанням
+                      енергії.
                     </p>
                   </li>
                   <li class="factors-item">
@@ -1007,10 +1000,9 @@
                 <h2 class="diet-factors__title">Чи знаєте ви..?</h2>
                 <p class="diet-factors__subtitle diet-factors__text">
                   Використовуючи замінник молока, важливо продовжувати
-                  забезпечувати всі особливі потреби цуценят. Вибирайте
-                  спеціальне молоко з основними поживними речовинами, які
-                  містяться в молоці суки щоб забезпечити якісний перехід від
-                  молока суки до його замінника.
+                  забезпечувати всі особливі потреби цуценят. Вибирайте замінник
+                  молока з поживними речовинами, які містяться в молоці суки щоб
+                  забезпечити якісний перехід від молока суки до його замінника.
                 </p>
               </div>
             </div>
@@ -1067,13 +1059,17 @@
               <div class="diet-block__img complex">
                 <img
                   src="./img/products/img-starter-puppy.svg"
-                  alt=""
+                  alt="starter-puppy"
                   class="diet-card__img" />
                 <img
                   src="./img/products/img-starter-puppy-mob.png"
                   alt=""
                   style="width: 80%"
                   class="diet-card__img-mob" />
+                <img
+                  src="./img/products/plashka-mob.svg"
+                  class="diet-card__img-mob img-plashka"
+                  alt="plashka" />
 
                 <p class="diet-card__text">
                   <span class="_gray">Цуценята від 1 до 2 місяців</span>
@@ -1082,30 +1078,30 @@
 
               <div class="diet-block__text">
                 <h2 class="diet-block__title">
-                  Допомогає цуценяті перейти на тверду їжу
+                  Допомогає цуценяті перейти на твердий корм
                 </h2>
                 <span class="_gray"
-                  >ФОРМУЛИ STARTER, ЩО ЛЕГКО РОЗМОЧУЮТЬСЯ, ДЛЯ ЦУЦЕНЯТ У ПЕРІОД
+                  >РАЦІОНИ STARTER, ЩО ЛЕГКО РОЗМОЧУЮТЬСЯ, ДЛЯ ЦУЦЕНЯТ У ПЕРІОД
                   ВІДЛУЧЕННЯ</span
                 >
                 <p class="diet-block__subtitle">
                   Відлучення - це етап
                   <span class="red">
-                    переходу від материнського молока до твердої їжі.</span
+                    переходу від материнського молока до твердого корму.</span
                   >
                   У цей період відбувається природна еволюція харчової поведінки
                   цуценят.
                 </p>
                 <p class="diet-block__subtitle">
                   Оскільки молочні зуби прорізуються від 21 до 35 днів після
-                  народження, цуценята можуть жувати і споживати сухий корм вже
-                  з 5-6 тижня.
+                  народження, цуценята можуть розгризати і споживати сухий корм
+                  вже з 5-6 тижня.
                   <span class="_red"
-                    >Текстура їжі, яка їм дається, повинна відповідати цій
+                    >Текстура корму, яка їм дається, повинна відповідати цій
                     еволюції.</span
                   >
                   Поживні раціони ROYAL CANIN® Starter забезпечують перехід від
-                  молока до твердої їжі завдяки крокетам, які легко
+                  молока до твердого корму завдяки крокетам, які легко
                   розмочуються.
                 </p>
                 <img src="./img/frise/frise-5.svg" class="_img" alt="" />
@@ -1117,8 +1113,9 @@
                 <div class="diet-list__text">
                   <h3 class="diet-list__title">Підтримання імунної системи</h3>
                   <p class="diet-list__subtitle">
-                    Комбінація нутрієнтів для підтримання здоров'я травної
-                    системи та природних захисних сил організму
+                    Міцна імунна система підтримує розвиток здорової імунної
+                    системи цуценят за допомогою комплексу нутрієнтів з науково
+                    доведеною ефективністю, в т. ч. вітамінів Е і С.
                   </p>
                 </div>
               </li>
@@ -1140,18 +1137,6 @@
                   <h3 class="diet-list__title">Розвиток мозку</h3>
                   <p class="diet-list__subtitle">
                     ДГК необхідна для росту та підтримання розвитку мозку.
-                  </p>
-                </div>
-              </li>
-
-              <li class="diet-list__item">
-                <img src="./img/icons/icon-9.svg" alt="" />
-                <div class="diet-list__text">
-                  <h3 class="diet-list__title">
-                    Поєднання сухого раціону з вологим
-                  </h3>
-                  <p class="diet-list__subtitle">
-                    Для полегшення критичного періоду відлучення.
                   </p>
                 </div>
               </li>
@@ -1262,7 +1247,7 @@
               <li class="diet-list__item">
                 <img src="./img/icons/icon-6.svg" alt="" />
                 <div class="diet-list__text">
-                  <h3 class="diet-list__title">Сильна імунна система</h3>
+                  <h3 class="diet-list__title">Міцна імунна система</h3>
                   <p class="diet-list__subtitle">
                     Підтримує розвиток здорової імунної системи цуценят за
                     допомогою комплексу нутрієнтів з науково доведеною
@@ -1276,9 +1261,9 @@
                 <div class="diet-list__text">
                   <h3 class="diet-list__title">Розвиток мозку</h3>
                   <p class="diet-list__subtitle">
-                    Збагачений Омега-3 жирними кислотами (ДГК) з науково
-                    доведеною ефективністю для підтримання розвитку мозку
-                    цуценят та сприяє покращенню раннього дресирування.
+                    Раціон збагачений омега-3 жирною кислотою (ДГК), яка має
+                    науково доведену ефективність у підтриманні розвитку мозку
+                    цуценят та сприяє навчанню під час раннього тренування.
                   </p>
                 </div>
               </li>
@@ -1364,9 +1349,8 @@
                   width="100%"
                   alt="" />
                 <p class="adaptive__block-img-text _red">
-                  Дозволяють споживати менше калорій при однаковій вазі корму,
-                  при цьому забезпечуючи належний рівень надходження поживних
-                  речовин.
+                  Дозволяють споживати менше калорій, при цьому забезпечуючи
+                  належний рівень надходження поживних речовин.
                 </p>
               </div>
             </div>
