--- a/index.html
+++ b/index.html
@@ -1205,65 +1205,70 @@
                 <img src="./img/frise/frise-6.svg" class="_img" alt="" />
               </div>
             </div>
+
+            <div class="eat_block">
+              <div class="_block">
+                <h3 class="text-mini">МІНІАТЮРНІ</h3>
+                <div class="eat_block mini">
+                  <img src="./img/icons/icon-12.svg" alt="" />
+                  <div class="diet-list__text">
+                    <h3 class="diet-list__title">Оптимальний вміст енергії</h3>
+                    <p class="diet-list__subtitle">
+                      Задовольняє високі енергетичні потреби цуценят мініатюрних
+                      розмірів, які мають дуже короткий період росту.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="_block">
+                <h3 class="text-puppy">ЦУЦЕНЯ ТА ПІДРОСТАЮЧИЙ СОБАКА</h3>
+                <div class="eat_block puppy">
+                  <div class="eat_block items">
+                    <img src="./img/icons/icon-10.svg" alt="" />
+                    <div class="diet-list__text">
+                      <h3 class="diet-list__title">
+                        ЦУЦЕНЯ ТА ПІДРОСТАЮЧИЙ СОБАКА 1-ша стадія росту
+                      </h3>
+                      <p class="diet-list__subtitle">
+                        Інтенсивний ріст - контроль за споживанням енергії.
+                      </p>
+                    </div>
+                  </div>
+                  <div class="eat_block items">
+                    <img src="./img/icons/icon-11.svg" alt="" />
+                    <div class="diet-list__text">
+                      <h3 class="diet-list__title">
+                        ЦУЦЕНЯ ТА ПІДРОСТАЮЧИЙ СОБАКА 2-га стадія росту
+                      </h3>
+                      <p class="diet-list__subtitle">
+                        Розвиток м'язів - підтримання кісток і суглобів.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
             <ul class="diet-list">
-              <li class="diet-list__item">
-                <img src="./img/icons/icon-10.svg" alt="" />
-                <div class="diet-list__text">
-                  <h3 class="diet-list__title">
-                    ЦУЦЕНЯ ТА ПІДРОСТАЮЧИЙ СОБАКА 1-ша стадія росту
-                  </h3>
-                  <p class="diet-list__subtitle">
-                    Інтенсивний ріст - контроль за споживанням енергії.
-                  </p>
-                </div>
-              </li>
-
-              <li class="diet-list__item">
-                <img src="./img/icons/icon-11.svg" alt="" />
-                <div class="diet-list__text">
-                  <h3 class="diet-list__title">
-                    ЦУЦЕНЯ ТА ПІДРОСТАЮЧИЙ СОБАКА 2-га стадія росту
-                  </h3>
-                  <p class="diet-list__subtitle">
-                    Розвиток м'язів - підтримання кісток і суглобів.
-                  </p>
-                </div>
-              </li>
-
-              <li class="diet-list__item">
-                <img src="./img/icons/icon-12.svg" alt="" />
-                <div class="diet-list__text">
-                  <h3 class="diet-list__title">
-                    МІНІАТЮРНІ <br />
-                    Оптимальний вміст енергії
-                  </h3>
-                  <p class="diet-list__subtitle">
-                    Задовольняє високі енергетичні потреби цуценят мініатюрних
-                    розмірів, які мають дуже короткий період росту.
-                  </p>
-                </div>
-              </li>
-
-              <li class="diet-list__item">
-                <img src="./img/icons/icon-6.svg" alt="" />
-                <div class="diet-list__text">
-                  <h3 class="diet-list__title">Міцна імунна система</h3>
-                  <p class="diet-list__subtitle">
-                    Підтримує розвиток здорової імунної системи цуценят за
-                    допомогою комплексу нутрієнтів з науково доведеною
-                    ефективністю, в т. ч. вітамінів Е і С.
-                  </p>
-                </div>
-              </li>
-
               <li class="diet-list__item">
                 <img src="./img/icons/icon-4.svg" alt="" />
                 <div class="diet-list__text">
                   <h3 class="diet-list__title">Розвиток мозку</h3>
                   <p class="diet-list__subtitle">
-                    Раціон збагачений омега-3 жирною кислотою (ДГК), яка має
-                    науково доведену ефективність у підтриманні розвитку мозку
-                    цуценят та сприяє навчанню під час раннього тренування.
+                    Збагачений Омега-3 жирними кислотами (ДГК) з науково
+                    доведеною ефективністю для підтримання розвитку мозку
+                    цуценят та сприяє покращенню раннього дресирування.
+                  </p>
+                </div>
+              </li>
+              <li class="diet-list__item">
+                <img src="./img/icons/icon-6.svg" alt="" />
+                <div class="diet-list__text">
+                  <h3 class="diet-list__title">Сильна імунна система</h3>
+                  <p class="diet-list__subtitle">
+                    Підтримує розвиток здорової імунної системи цуценят за
+                    допомогою комплексу нутрієнтів з науково доведеною
+                    ефективністю, в т. ч. вітамінів Е і С.
                   </p>
                 </div>
               </li>
