--- a/index.html
+++ b/index.html
@@ -9,8 +9,31 @@
     <link rel="stylesheet" href="./css/full.css" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-W479Z9P");
+    </script>
+    <!-- End Google Tag Manager -->
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-W479Z9P"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="wrapper">
       <header class="header">
         <div class="header__container _container">
@@ -357,7 +380,7 @@
                   alt=""
                   class="diet-card__img" />
                 <img
-                  src="./img/products/img-42d-mob.png"
+                  src="./img/products/42d.svg"
                   alt=""
                   style="width: 90%"
                   class="diet-card__img-mob" />
@@ -1255,16 +1278,16 @@
                 <div class="diet-list__text">
                   <h3 class="diet-list__title">Розвиток мозку</h3>
                   <p class="diet-list__subtitle">
-                    Збагачений Омега-3 жирними кислотами (ДГК) з науково
-                    доведеною ефективністю для підтримання розвитку мозку
-                    цуценят та сприяє покращенню раннього дресирування.
+                    Раціон збагачений омега-3 жирною кислотою (ДГК), яка має
+                    науково доведену ефективність у підтриманні розвитку мозку
+                    цуценят та сприяє навчанню під час раннього тренування.
                   </p>
                 </div>
               </li>
               <li class="diet-list__item">
                 <img src="./img/icons/icon-6.svg" alt="" />
                 <div class="diet-list__text">
-                  <h3 class="diet-list__title">Сильна імунна система</h3>
+                  <h3 class="diet-list__title">Міцна імунна система</h3>
                   <p class="diet-list__subtitle">
                     Підтримує розвиток здорової імунної системи цуценят за
                     допомогою комплексу нутрієнтів з науково доведеною
@@ -1280,7 +1303,7 @@
                   <p class="diet-list__subtitle">
                     Комбінація пребіотиків (МОС) і високоперетравних білків, які
                     сприяють балансу мікробіоти кишечника для підтримання
-                    здоров'я травної системи.
+                    здоров’я травної системи.
                   </p>
                 </div>
               </li>
