--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                   alt=""
                   class="diet-card__img" />
                 <img
-                  src="./img/products/42d.svg"
+                  src="./img/products/img-42d-mob.png"
                   alt=""
                   style="width: 90%"
                   class="diet-card__img-mob" />
@@ -540,8 +540,8 @@
                   <p class="diet-list__subtitle">
                     Адаптовано до
                     <span class="_gray"> високих енергетичних потреб суки </span
-                    >наприкінці вагітності, та під час лактації для оптимального
-                    росту цуценят.
+                    >наприкінці вагітності та під час лактації, та для
+                    оптимального росту цуценят.
                   </p>
                 </div>
               </li>
